XNAT-7944: Claim a direct archive session before deleting it and reuse the prearchive delete mechanics
Refactor of the delete path with no change to the user-visible contract
(403 / 404 / 409 / 500 as before):

- Replace the in-flight status deny-list with a status transition: the
  session is claimed by moving it from RECEIVING or ERROR to DELETING
  through the same setStatusAndReturn primitive the archiver uses. This
  is what PrearcDatabase.deleteSession does, and it fences the importer
  (getOrCreate only appends to RECEIVING sessions), the archive trigger
  (findReadyForArchive only selects RECEIVING) and create() (a DELETING
  session still counts as active at its location). A failed file delete
  now records the cause via setStatusToError so the row stays retryable.
- Share the "location still in use" predicate between create() and the
  delete path as hasActiveSessionAtLocation(location, excludingId)
  instead of exposing findByLocation and re-encoding the rule.
- Remove files with org.nrg.xft.utils.FileUtils.MoveToCache, as the
  prearchive delete does, so the backupDeletedToCache site preference
  applies to direct archive deletes too.
- Derive the session XML path in one place (sessionXmlPath) and use it
  at the four existing call sites as well.
- Add a Hibernate-service test for the claim transition and the
  location predicate; simplify the service test accordingly.

Claude-Session: https://claude.ai/code/session_01K3eXEt5dL33MpxxmxeXtnZ